--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,20 @@
             <version>1.3.2</version>
             <type>jar</type>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.49</version>
+        </dependency>
+
     </dependencies>
 
     <build>
